[workspace]
members = [
    "bin/helix-memoriz-api",
    "helix-memoriz-domain",
    "storage/pg-db-storage",
    "storage/sled-db-storage",
    "storage/meilisearch-search-engine"
]

##DEFAULT RUNNING BIN
default-members=["bin/helix-memoriz-api"]


##__FIX FOR ARM COMPILATION SINCE RUST 1.38
[profile.release]
codegen-units = 1