[package]
name = "helix-pg-db-memoriz-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-memoriz-domain = { path = "../../helix-memoriz-domain" }
helix-db-lib = {git = "https://github.com/slackmagic/helix-shared-lib", branch = "master"}

##DATA UTILS => UTC Date, UUID generation
uuid = { version = "0.8", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }
postgres = {version = "0.19", features =["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]}