[package]
name = "meilisearch-search-engine"
version = "0.1.0"
edition = "2018"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-memoriz-domain = { path = "../../helix-memoriz-domain" }

##DATA UTILS => UTC Date, UUID generation
uuid = { version = "0.8", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }


##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"

meilisearch-sdk =  { version = "0.9.0", features = ["sync"] }
async-trait = "0.1.51"


