[package]
name = "pg-db-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-memoriz-domain = { path = "../../helix-memoriz-domain" }

##DATA UTILS => UTC Date, UUID generation
uuid = { version = "0.8", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }

async-trait = "0.1.48"
tokio-postgres = {version ="0.5.5", features =["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"]}
deadpool-postgres = "0.5.0"
