[package]
name = "sled-db-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-memoriz-domain = { path = "../../helix-memoriz-domain" }
sled = "0.34.6"

##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "^0.11.1"

